# badbee

./: .dockerignore  Cargo.toml  Dockerfile  README.md
backend/: Cargo.toml
backend/src/: db.rs  image.rs  lib.rs
backend/src/io/: bitmap_font.rs  bmp_on_disk.rs  file_in_memory.rs  image_io.rs  in_memory_image.rs  mod.rs
backend/src/model/: async_model_reader.rs  colors.rs  mod.rs  model.rs  model_reader.rs
backend/src/model/datatypes/: abc.rs  boolean.rs  color.rs  counter.rs  flood.rs  image.rs  mod.rs  pie.rs  reference.rs
command-line/: Cargo.toml
command-line/src/: main.rs
static/: index.html  tracker.html
web-client/: Cargo.toml
web-client/src/: api.rs  dog_model.rs  dog_view.rs  field_view.rs  lib.rs  record_view.rs
web-server/: Cargo.toml
web-server/src/: handlers.rs  json.rs  main.rs
