[package]
name = "badbee-backend"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"
name = "badbee_backend"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
imageproc = "0.22.0"
base64 = "0.13.0"
tokio = { version = "1", features = ["full"] }
byteorder = "1.4.3"
log = "0.4"
stderrlog = "0.5.1"