[package]
name = "badbee-command-line"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
badbee-backend = { path = "../backend"}
byteorder = "1.4.3"
tokio = { version = "1", features = ["full"] }
log = "0.4"
stderrlog = "0.5.1"