[package]
name = "web-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
badbee-backend = { path = "../backend"}
maplit = "1.0.2"
serde_json = "1.0.68"