[package]
name = "web-server"
version = "0.1.0"
edition = "2018"

[[bin]]
path = "src/main.rs"
name = "web-server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
badbee-backend = { path = "../backend"}
maplit = "1.0.2"
serde_json = "1.0.68"
serde_derive = "1.0"
serde = "1.0"
log = "0.4"
stderrlog = "0.5.1"